css/styles.css
* { 
  box-sizing: border-box; 
  margin: 0; 
  padding: 0; 
}


body { 
  background-color: #AD9BAA; 
  max-width: 1200px; 
  margin: 0 auto;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
}


header { 
  display: flex; 
  align-items: stretch; 
  justify-content: center;
  background-color: #4B88A2; 
  border-radius: 12px 12px 12px 0px;;
  height: 18vh; 
  max-height: 20vh;
  border: 3px solid #3b3561; 
  padding-top: 1em;
  margin: 1em 1em 0 1em;

}


.header-img {
  height: 5vw;
  width: 5vw;
  margin-top: 2.5vw;

}


.header-text { 
  padding: 2em 2em; 
  text-align: center;
  color: #3b3561bb; 
  font-size: 1.1em;
}


h2, h3, h4, p { 
  margin-bottom: 1em; 
  color: #e8dce6;
}


.card-heading { 
  text-align: center; 
  padding-top: 1em; 
}


main { 
  min-height: calc(100vh - 130px); 
  display: flex; 
  flex-direction: row-reverse;
  align-items: flex-start; 
  padding: 0 0 1em 0;
  gap: 1em;
}


.main-content-wrapper { 
  margin: 1em;
  flex: 1;
  display: flex;
  flex-direction: column;
  width:100%;
  height: 100%;
}


.bio-card, 
.skills-card, 
.form-card,
#base-photo { 
  border-radius: 20px; 
  padding: 1% 1.2%; 
  margin: 2% auto;
  border: 4px solid; 
  width: 80%

}

#base-photo {
  padding-top: 1em;
  border: none;
}


.bg-pink { 
  background-color: #685369c5; 
  border-color: #685369;

}


.bg-purple { 
  background-color: #3b35619b; 
  border-color: #3B3561;
}


table {
  border-collapse: collapse;
  text-align: center; 
  color: #e8dce6;
}


th, 
td { 
  border: 3px solid #3B3561; 
  font-size: medium; 
  padding: 8px;
}


.contact-form {
  max-width: 500px;
  margin: auto;
}


.contact-form label {
  font-weight: bold;
  margin-top: 8px;
  color: #e8dce6;
}


.contact-form input, 
.contact-form textarea { 
  padding: 9px; 
  margin-bottom: 12px; 
  width: 100%; 
  border-radius: 10px; 
  border: 1px solid #2d5464; 
  background-color: #e2e2f5; 
}


textarea { 
  height: 170px; 
}


textarea:focus, 
input:focus { 
  outline: 1px solid #4B88A2; 
}


.btn-blue { 
  background-color: #216d8d; 
  color: rgb(226, 226, 245); 
  border: 1px solid #2d5464; 
  border-radius: 20px; 
  align-self: center; 
  width: 100px; 
  padding: 7px; 
}


.btn-blue:hover { 
  background-color: #3B3561; 
}


aside { 
  display: flex; 
  flex-direction: column; 
  width: 18%; 
  color: #e8dce6; 
  background-color: #4B88A2; 
  border: 3px solid #3b3561; 
  border-top: none; 
  border-radius: 0 0 12px 12px;
  padding: 2rem 1rem 2em 1em;
  gap: 3.5em;
  margin: 0 0 1em 1em;
}


#aside-photo { 
  width: 100%; 
  border-radius: 10px;
  border: 3px solid #685369; 
}


.sidebar-card { 
  justify-content: center;
  border-radius: 12px; 
  border: 3px solid; 
  padding: 1.3rem 1.3rem 1.3rem 0.5rem;
  width: 100%; 
  font-size: 1vw;
  text-align: center;
}


.sidebar-card .card-heading {
  margin-bottom: 0.5rem;
  font-size: 1.2vw;
  
}


.bg-translucent-pink { 
  background-color: #654767b1;
  border-color: #0c536f;

}


.bg-translucent-indigo {
   background-color: #3b3561a7; 
   border-color: #0c536f;

  }


.bg-translucent-teal {
  background-color: #0b496391;
  border-color: #3b3561;

}


.fixed-height{
  display:flex;
  flex-direction: column;
  align-items: center;
  height: 50vh ;
}


.fixed-height ul {
  list-style: none;
}


.working-list {
  padding-left: 1.2rem;
  line-height: 1.6;
}


.sidebar-card a img {
  width: 100%;
  max-width: 120px;
  height: auto;
  align-self: center;
  margin-top: 1em;
  
}


.sidebar-card a img:hover {
  box-shadow: 0 0 20px 7px #512ba2;
  border-radius: 60px;
}


footer { 
  display: flex;
  justify-content: space-between;
  color:#2d5464;
  padding: 0 2vw 2vw 2vw;
  margin-top: 0;
  width: 100%; 
}

#base-photo {
  display: block;
  margin: 2% auto;
  border: none;
}



/* MEDIA QUERY */

@media (max-width: 768px) {
  body {
    font-size: 2.8vw;
    margin: 0;
  }
  
  main {
    flex-direction:column;
    align-items: center;
  }

  aside {
    max-width: 75%;
    width: inherit;
    border-top: 3px solid #3b3561; 
    border-radius: 8px;
  }

  .fixed-height {
   min-height: 60vh;
  }

  .sidebar-card,
  th,
  td,
  .skills-card,
  .bio-card,
  .contact-form, 
  .form-card {
    font-size: inherit;
  }

  .sidebar-card .card-heading {
    font-size: 3vw;
  }

 .header-img{
    height: 13vw;
    width: 15vw;
    margin: auto;
    padding: 3vw;
 } 

 header {
  border-radius: 8px;
 }

 .header-text p {
  font-size: 2.4vw;
  padding-top: 0.08vw;
 }

  .header-text{
    font-size: inherit;
    margin: auto;
  }

  #base-photo {
    margin-top: 3vw;
  }
}

